# lektor-responsive-image

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  MANIFEST.in  README.md  lektor_responsive_image.py  pdm_build.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  tests.yml
tests/: conftest.py  test_plugin.py
