[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "lektor-responsive-image"
dynamic = ["version", "readme"]
description = "Lektor plugin to help with multi-resolution responsive images"
urls.Home = "https://github.com/dairiki/lektor-responsive-image"
keywords = [
    "Lektor plugin",
    "responsive images",
    "multi-resolution images",
    "srcset",
]
license.file = "LICENSE"
authors = [
    {name = "Jeff Dairiki", email = "dairiki@dairiki.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Environment :: Web Environment",
    "Framework :: Lektor",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: HTML",
]
requires-python = ">=3.8"

[project.entry-points."lektor.plugins"]
responsive-image = "lektor_responsive_image:ResponsiveImagePlugin"

[tool.pdm.build]
excludes = ["pdm_build.py"]
source-includes = ["CHANGES.md", "tests/", "tox.ini"]

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
dev = [
    "lektor>=3.4.0a0",
    "pytest>=7.4.4",
    "ruff>=0.1.14",
]

[tool.pdm.scripts]
tests = "pytest tests -ra"

[tool.coverage.run]
parallel = true
source_pkgs = [
    "lektor_responsive_image",
]

[tool.coverage.paths]
paths = [
    "lektor-responsive-image",
    ".tox/py*/*/lektor-responsive-image",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    '^\s*\.\.\.\s*$',
    '^\s*raise\s+NotImplementedError\(\)\s*$',
]

[tool.ruff]
extend-exclude = [".pdm-build"]
explicit-preview-rules = true
allowed-confusables = ["’", "–"]

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "E", "W", # pycodestyle
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "Q", # flake8-quotes
    "YTT", # flake8-2020
    "C4", # flake8-comprehensions
    "T10", # flake8-debugger
    "EM", # flake8-errmsg
    "FA", # flake8-future-annotations
    "T20", # flake8-print
    "RSE", # flake8-raise
    "I", # isort
    "C90", # mccabe
    "PGH", # pygrep-hooks
    #"PL", # pylint
]

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false
known-first-party = [
    "conftest",
    "lektor_responsive_images",
]
