[metadata]
name = lektor-responsive-image
description = Lektor plugin to help with multi-resolution responsive images
long_description = file: README.md, CHANGES.md
long_description_content_type = text/markdown
url = https://github.com/dairiki/lektor-responsive-image
author = Jeff Dairiki
author_email = dairiki@dairiki.org
keywords = Lektor plugin, responsive images, multi-resolution images, srcset
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Environment :: Web Environment
    Framework :: Lektor
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Text Processing :: Markup :: HTML

[options]
py_modules = lektor_responsive_image
setup_requires =
    setuptools >= 40
    setuptools_scm

[options.entry_points]
lektor.plugins =
    responsive-image = lektor_responsive_image:ResponsiveImagePlugin

[bdist_wheel]
universal = 1
